--- a/force-app/main/default/lwc/accountLookUp/accountLookUp.html
+++ b/force-app/main/default/lwc/accountLookUp/accountLookUp.html
@@ -19,7 +19,7 @@
                <template if:true={showResult} for:each={results} for:item="x" for:index="index">
                    <li key={x.Id} data-recordid={x.Id} data-name={x.Name} data-value={x.Product_Sub_Total__c} value={x.Name} role='option' class='hover' onclick={itemSelect}>
                               <span class="slds-media__body">
-                                <span class="slds-listbox__option-text_entity">
+                                <span class="slds-listbox__option-text_entity space">
                                     <lightning-formatted-rich-text
                                         value={x.Name}
                                     >
