adding ability to set owner of price book based on owner of account. Show warning if cost decreased

--- a/force-app/main/default/lwc/omsFlowPriceUpdate/omsFlowPriceUpdate.html
+++ b/force-app/main/default/lwc/omsFlowPriceUpdate/omsFlowPriceUpdate.html
@@ -27,6 +27,9 @@
                    <tr class="slds-hint-parent" key={x.Id}>
                         <th data-label="Product Row" scope="row" style={x.color}>
                              <b>{x.Name}</b>    
+                             <template if:true={x.costDown}>
+                                <lightning-helptext content={costHelpText}></lightning-helptext>
+                             </template>
                         </th>
                         <td>
                             <div class="slds-truncate" title="Sales Price">
